--- a/app/src/main/res/layout/item_beer.xml
+++ b/app/src/main/res/layout/item_beer.xml
@@ -9,7 +9,7 @@
 
         <variable
             name="item"
-            type="com.example.beers.entities.Beer" />
+            type="com.example.beers.entities.DTOBeer" />
     </data>
 
     <com.google.android.material.card.MaterialCardView
